# q-learning

./: .gitignore  README.md  pyproject.toml
notebooks/: econ_game.ipynb  grid_example.ipynb  line_example.ipynb
qlearning_env/: constants.py  settings.py
results/: Q1.csv  Q2.csv
